Big refactoring for legacy_document support
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/tests/data/groundtruth/docling_v1/redp5110.md
+++ b/tests/data/groundtruth/docling_v1/redp5110.md
@@ -35,6 +35,7 @@ Note to U.S. Government Users Restricted Rights -- Use, duplication or disclosur
 ## Contents
 
 
+
 | Notices                                                                                                                                        | . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . vii   |
 |------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------|
 | Trademarks                                                                                                                                     | . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . viii          |
@@ -79,6 +80,7 @@ Note to U.S. Government Users Restricted Rights -- Use, duplication or disclosur
 | 3.6.6 Activating RCAC . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .                      | 28                                                                                                                                      |
 | 3.6.7 Demonstrating data access with RCAC . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .                                      | 29                                                                                                                                      |
 | 3.6.8 Demonstrating data access with a view and RCAC . . . . . . . . . . . . . . . . . . . . . . .                                             | 32                                                                                                                                      |
+
 
 
 | Chapter 4. Implementing Row and Column Access Control: Banking example . . . . .                                                                                                                                                   | 37                                                                                                                                                                                                                                 |
@@ -129,6 +131,7 @@ Note to U.S. Government Users Restricted Rights -- Use, duplication or disclosur
 |                                                                                                                                                                                                                                    | 113                                                                                                                                                                                                                                |
 |                                                                                                                                                                                                                                    | 111                                                                                                                                                                                                                                |
 | Chapter 7. Row and Column Access Control management  . . . . . . . . . . . . . . . . . . . .                                                                                                                                       | Chapter 7. Row and Column Access Control management  . . . . . . . . . . . . . . . . . . . .                                                                                                                                       |
+
 
 
 | 7.1 Managing row permissions and column masks. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .                  | 114                                                                                                                     |
@@ -601,6 +604,7 @@ CHGFCNUSG FCNID(QIBM_DB_SECADM) USER(HBEDOYA) USAGE(*ALLOWED)
 The FUNCTION_USAGE view contains function usage configuration details. Table 2-1 describes the columns in the FUNCTION_USAGE view.
 
 Table 2-1 FUNCTION_USAGE view
+
 | Column name   | Data type   | Description                                                                                                                                                           |
 |---------------|-------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | FUNCTION_ID   | VARCHAR(30) | ID of the function.                                                                                                                                                   |
@@ -631,6 +635,7 @@ A preferred practice is that the RCAC administrator has the QIBM_DB_SECADM funct
 Table 2-2 shows a comparison of the different function usage IDs and *JOBCTL authority to the different CL commands and DB2 for i tools.
 
 Table 2-2 Comparison of the different function usage IDs and *JOBCTL authority
+
 | User action                                                                    | *JOBCTL   | QIBM_DB_SECADM   | QIBM_DB_SQLADM   | QIBM_DB_SYSMON   | No Authority   |
 |--------------------------------------------------------------------------------|-----------|------------------|------------------|------------------|----------------|
 | SET CURRENT DEGREE  (SQL statement)                                            | X         |                  | X                |                  |                |
@@ -645,6 +650,7 @@ Table 2-2 Comparison of the different function usage IDs and *JOBCTL authority
 | MODIFY PLAN CACHE procedure                                                    | X         |                  | X                |                  |                |
 | MODIFY PLAN CACHE PROPERTIES procedure (currently does not check authority)    | X         |                  | X                |                  |                |
 | CHANGE PLAN CACHE SIZE procedure (currently does not check authority)          | X         |                  | X                |                  |                |
+
 
 
 | User action                                                  | *JOBCTL   | QIBM_DB_SECADM   | QIBM_DB_SQLADM   | QIBM_DB_SYSMON   | No Authority   |
@@ -725,6 +731,8 @@ A row permission is a database object that manifests a row access control rule f
 The SQL CREATE PERMISSION statement that is shown in Figure 3-1 is used to define and initially enable or disable the row access rules.
 
 Figure 3-1 CREATE PERMISSION SQL statement
+
+The SQL CREATE PERMISSION statement that is shown in Figure 3-1 is used to define and initially enable or disable the row access rules.Figure 3-1 CREATE PERMISSION SQL statement
 <!-- image -->
 
 ## Column mask
@@ -783,6 +791,7 @@ In addition to these four special registers, any of the DB2 special registers ca
 Table 3-1 summarizes these special registers and their values.
 
 Table 3-1 Special registers and their corresponding values
+
 | Special register     | Corresponding value                                                                                                                   |
 |----------------------|---------------------------------------------------------------------------------------------------------------------------------------|
 | USER or SESSION_USER | The effective user of the thread excluding adopted authority.                                                                         |
@@ -813,6 +822,7 @@ IBM DB2 for i supports nine different built-in global variables that are read on
 Table 3-2 lists the nine built-in global variables.
 
 Table 3-2 Built-in global variables
+
 | Global variable       | Type         | Description                                                    |
 |-----------------------|--------------|----------------------------------------------------------------|
 | CLIENT_HOST           | VARCHAR(255) | Host name of the current client as returned by the system      |
@@ -1242,6 +1252,7 @@ Figure 4-2 Rules for row and column access
 The chart that is shown in Figure 4-3 shows the column access that is allowed by group and lists the column masks by table.
 
 Figure 4-3 Column masks
+
 |          |          | CUSTOMERS                                                                                                                                                       | ACCOUNTS                      |
 |----------|----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
 | SECURITY | No Rows  | CUSTOMER_DRIVERS_LICENSE_NUMBER CUSTOMER_EMAIL CUSTOMER_LOGIN_ID CUSTOMER_SECURITY_QUESTION CUSTOMER_SECURITY_QUESTION_ANSWER CUSTOMER_TAX_ID                   | ACCOUNT_NUMBER                |
@@ -1968,6 +1979,7 @@ CREDIT_CARD_NUMBER;
 ## With RCAC Masking
 
 
+
 | CREDIT CARD NUMBER _ _   | TOTAL         |
 |--------------------------|---------------|
 | 3785 0000 0000 1234      | 233.50        |
@@ -1982,6 +1994,7 @@ CREDIT_CARD_NUMBER;
 | 6011 9999 9999 0001      | 10.00         |
 
 Figure 6-1 Timing of column masking
+
 | CREDIT CARD NUMBER _ _    | TOTAL         |
 |---------------------------|---------------|
 | **** **** **** 1234       | 233.50        |
