--- a/tests/data/groundtruth/docling_v2/redp5110.md
+++ b/tests/data/groundtruth/docling_v2/redp5110.md
@@ -459,6 +459,7 @@ As shown in Figure 1-1, it is an all-or-nothing access to the rows of a table.
 
 Figure 1-1 All-or-nothing access to the rows of a table
 
+
 <!-- image -->
 
 Many businesses are trying to limit data access to a need-to-know basis. This security goal means that users should be given access only to the minimum set of data that is required to perform their job. Often, users with object-level access are given access to row and column values that are beyond what their business task requires because that object-level security provides an all-or-nothing solution. For example, object-level controls allow a manager to access data about all employees. Most security policies limit a manager to accessing data only for the employees that they manage.
@@ -472,6 +473,7 @@ Using SQL views to limit access to a subset of the data in a table also has its 
 Even if you are willing to live with these performance and management issues, a user with *ALLOBJ access still can directly access all of the data in the underlying DB2 table and easily bypass the security controls that are built into an SQL view.
 
 Figure 1-2 Existing row and column controls
+
 
 <!-- image -->
 
@@ -583,6 +585,7 @@ The FUNCTION_USAGE view contains function usage configuration details. Table 2-1
 
 Table 2-1 FUNCTION_USAGE view
 
+
 | Column name   | Data type   | Description                                                                                                                                                           |
 |---------------|-------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | FUNCTION_ID   | VARCHAR(30) | ID of the function.                                                                                                                                                   |
@@ -613,6 +616,7 @@ A preferred practice is that the RCAC administrator has the QIBM_DB_SECADM funct
 Table 2-2 shows a comparison of the different function usage IDs and *JOBCTL authority to the different CL commands and DB2 for i tools.
 
 Table 2-2 Comparison of the different function usage IDs and *JOBCTL authority
+
 
 | User action                                                                    | *JOBCTL   | QIBM_DB_SECADM   | QIBM_DB_SQLADM   | QIBM_DB_SYSMON   | No Authority   |
 |--------------------------------------------------------------------------------|-----------|------------------|------------------|------------------|----------------|
@@ -707,6 +711,9 @@ The SQL CREATE PERMISSION statement that is shown in Figure 3-1 is used to defin
 
 Figure 3-1 CREATE PERMISSION SQL statement
 
+The SQL CREATE PERMISSION statement that is shown in Figure 3-1 is used to define and initially enable or disable the row access rules.Figure 3-1 CREATE PERMISSION SQL statement
+
+
 <!-- image -->
 
 ## Column mask
@@ -716,6 +723,7 @@ A column mask is a database object that manifests a column value access control 
 Column masks replace the need to create and use views to implement access control. The SQL CREATE MASK statement that is shown in Figure 3-2 is used to define and initially enable or disable the column value access rules.
 
 Figure 3-2 CREATE MASK SQL statement
+
 
 <!-- image -->
 
@@ -729,6 +737,7 @@ Note: An exclusive lock is required on the table object to perform the alter ope
 
 Figure 3-3 ALTER PERMISSION and ALTER MASK SQL statements
 
+
 <!-- image -->
 
 You can activate and deactivate RCAC for new or existing tables by using the SQL ALTER TABLE statement (Figure 3-4). The ACTIVATE or DEACTIVATE clause must be the option that is specified in the statement. No other alterations are permitted at the same time. The activating and deactivating effectively turns on or off all RCAC processing for the table. Only enabled row permissions and column masks take effect when activating RCAC.
@@ -736,6 +745,7 @@ You can activate and deactivate RCAC for new or existing tables by using the SQL
 Note: An exclusive lock is required on the table object to perform the alter operation. All open cursors must be closed.
 
 Figure 3-4 ALTER TABLE SQL statement
+
 
 <!-- image -->
 
@@ -769,6 +779,7 @@ Table 3-1 summarizes these special registers and their values.
 
 Table 3-1 Special registers and their corresponding values
 
+
 | Special register     | Corresponding value                                                                                                                   |
 |----------------------|---------------------------------------------------------------------------------------------------------------------------------------|
 | USER or SESSION_USER | The effective user of the thread excluding adopted authority.                                                                         |
@@ -789,6 +800,7 @@ GLYPH<SM590000> When proc1 ends, the session reverts to its original state with 
 
 Figure 3-5 Special registers and adopted authority
 
+
 <!-- image -->
 
 ## 3.2.2 Built-in global variables
@@ -800,6 +812,7 @@ IBM DB2 for i supports nine different built-in global variables that are read on
 Table 3-2 lists the nine built-in global variables.
 
 Table 3-2 Built-in global variables
+
 
 | Global variable       | Type         | Description                                                    |
 |-----------------------|--------------|----------------------------------------------------------------|
@@ -947,6 +960,7 @@ The result of this query is shown in Figure 3-7, which is the total number of em
 
 Figure 3-7 Number of employees
 
+
 <!-- image -->
 
 2. Run a second SQL statement (shown in Example 3-6) that lists the employees. If you have read access to the table, you see all the rows no matter who you are.
@@ -982,6 +996,7 @@ CREATE PERMISSION HR_SCHEMA.PERMISSION1_ON_EMPLOYEES ON HR_SCHEMA.EMPLOYEES AS E
 2. Look at the definition of the table and see the permissions, as shown in Figure 3-9. QIBM_DEFAULT_EMPLOYEE_HR_SCHEMA is the default permission, as described in 3.1.2, "Enabling and activating RCAC" on page 16.
 
 Figure 3-9 Row permissions that are shown in System i Navigator
+
 
 <!-- image -->
 
@@ -1027,6 +1042,7 @@ CREATE MASK HR_SCHEMA.MASK_TAX_ID_ON_EMPLOYEES ON HR_SCHEMA.EMPLOYEES AS EMPLOYE
 
 Figure 3-10 Column masks shown in System i Navigator
 
+
 <!-- image -->
 
 ## 3.6.6 Activating RCAC
@@ -1047,11 +1063,13 @@ Now that you have created the row permission and the two column masks, RCAC must
 
 Figure 3-11 Selecting the EMPLOYEES table from System i Navigator
 
+
 <!-- image -->
 
 3. The EMPLOYEES table definition is displayed, as shown in Figure 3-12. Note that the Row access control and Column access control options are checked.
 
 Figure 3-12 RCAC enabled on the EMPLOYEES table
+
 
 <!-- image -->
 
@@ -1069,11 +1087,13 @@ SELECT COUNT(*) as ROW_COUNT FROM HR_SCHEMA.EMPLOYEES;
 
 Figure 3-13 Count of EMPLOYEES by HR
 
+
 <!-- image -->
 
 3. The result of the same query for a user who is logged on as TQSPENSER (Manager) is shown in Figure 3-14. TQSPENSER has five employees in his department and he can also see his own row, which is why the count is 6.
 
 Figure 3-14 Count of EMPLOYEES by a manager
+
 
 <!-- image -->
 
@@ -1081,11 +1101,13 @@ Figure 3-14 Count of EMPLOYEES by a manager
 
 Figure 3-15 Count of EMPLOYEES by an employee
 
+
 <!-- image -->
 
 5. The result of the same query that is run by the Consultant/DBE gives the result that is shown in Figure 3-16. The consultants/DBE can manage and implement RCAC, but they do not see any rows at all.
 
 Figure 3-16 Count of EMPLOYEES by a consultant
+
 
 <!-- image -->
 
@@ -1213,6 +1235,7 @@ GLYPH<SM590000> The row permission for the TRANSACTIONS table is based on the AC
 
 Figure 4-1 Internet banking example
 
+
 <!-- image -->
 
 ## 4.2 Description of the users roles and responsibilities
@@ -1235,11 +1258,13 @@ Based on their respective roles and responsibilities, the users (that is, a grou
 
 Figure 4-2 Rules for row and column access
 
+
 <!-- image -->
 
 The chart that is shown in Figure 4-3 shows the column access that is allowed by group and lists the column masks by table.
 
 Figure 4-3 Column masks
+
 
 |          |          | CUSTOMERS                                                                                                                                                       | ACCOUNTS                      |
 |----------|----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
@@ -1271,6 +1296,7 @@ GLYPH<SM590000> Adam O. Olsen is a bank customer with a web application login ID
 Figure 4-4 shows the data model of the banking scenario that is used in this example.
 
 Figure 4-4 Data model of the banking scenario
+
 
 <!-- image -->
 
@@ -1304,6 +1330,7 @@ This section reviews the tables that are used in this example. As shown in Figur
 
 Figure 4-5 Tables that are used in the banking example
 
+
 <!-- image -->
 
 Note: Appendix A, "Database definitions for the RCAC banking example" on page 121 provides a script that you can use to create all the database definitions or DDLs to re-create this RCAC example.
@@ -1316,6 +1343,7 @@ To review the attributes of each table that is used in this banking example, com
 
 Figure 4-6 CUSTOMERS table attributes
 
+
 <!-- image -->
 
 3. Click the Columns tab to see the columns of the CUSTOMERS table, as shown in Figure 4-7.
@@ -1326,11 +1354,13 @@ Figure 4-7 Column definitions of the CUSTOMERS table
 
 Figure 4-8 Reviewing the constraints on the CUSTOMERS table
 
+
 <!-- image -->
 
 5. Review the definition of the ACCOUNTS table. The definition of the ACCOUNTS table is shown in Figure 4-9. RCAC has not been defined for this table yet.
 
 Figure 4-9 ACCOUNTS table attributes
+
 
 <!-- image -->
 
@@ -1342,11 +1372,13 @@ Figure 4-10 Column definitions of the ACCOUNTS table
 
 Figure 4-11 Reviewing the constraints on the ACCOUNTS table
 
+
 <!-- image -->
 
 8. Review the definition of the TRANSACTIONS table. The definition of the TRANSACTIONS table is shown in Figure 4-12. RCAC is not defined for this table yet.
 
 Figure 4-12 TRANSACTIONS table attributes
+
 
 <!-- image -->
 
@@ -1357,6 +1389,7 @@ Figure 4-13 Column definitions of the TRANSACTIONS table
 10.Click the Key Constraints , Foreign Key Constraints , and Check Constraints tabs to review the key, foreign, and check constraints on the TRANSACTIONS table, as shown in Figure 4-14. There is one Foreign Key Constraint and one Check Constraint on the TRANSACTIONS table.
 
 Figure 4-14 Reviewing the constraints on the TRANSACTIONS table
+
 
 <!-- image -->
 
@@ -1372,11 +1405,13 @@ The first step is to assign the appropriate function usage ID to the Database En
 
 Figure 4-15 Application administration
 
+
 <!-- image -->
 
 2. The Application Administration window opens, as shown in Figure 4-16. Click IBM i  Database and select the function usage ID of Database Security Administrator .
 
 Figure 4-16 Application administration for IBM i
+
 
 <!-- image -->
 
@@ -1384,11 +1419,13 @@ Figure 4-16 Application administration for IBM i
 
 Figure 4-17 Customizing the Database Security Administrator function usage ID
 
+
 <!-- image -->
 
 4. The Customize Access window opens, as shown in Figure 4-18. Click the users that need to implement RCAC. For this example, HBEDOYA and MCAIN are selected. Click Add and then click OK .
 
 Figure 4-18 Customize Access window
+
 
 <!-- image -->
 
@@ -1396,11 +1433,13 @@ Figure 4-18 Customize Access window
 
 Figure 4-19 Function usage ID Database Security Administrator customized
 
+
 <!-- image -->
 
 6. Run an SQL query that shows which user profiles are enabled to define RCAC. The SQL query is shown in Figure 4-20.
 
 Figure 4-20 Query to display user profiles with function usage ID for RCAC
+
 
 <!-- image -->
 
@@ -1414,6 +1453,7 @@ The next step is to create the different group profiles (ADMIN, CUSTOMER, TELLER
 
 Figure 4-21 Creating group profiles
 
+
 <!-- image -->
 
 2. The New Group window opens, as shown in Figure 4-22. For each new group, enter the Group name (ADMIN, CUSTOMER, TELLER, and DBE) and add the user profiles that are associated to this group by selecting the user profile and clicking Add .
@@ -1422,11 +1462,13 @@ Figure 4-22 shows adding user TQSPENCER to the TELLER group profile.
 
 Figure 4-22 Creating group profiles and adding users
 
+
 <!-- image -->
 
 3. After you create all the group profiles, you should see them listed in System i Navigator under Users and Groups  Groups , as shown in Figure 4-23.
 
 Figure 4-23 Newly created group profiles
+
 
 <!-- image -->
 
@@ -1440,11 +1482,13 @@ In this step, you create a global variable that is used to capture the Customer_
 
 Figure 4-24 Creating a global variable
 
+
 <!-- image -->
 
 2. The New Global Variable window opens, as shown in Figure 4-25. Enter the global variable name of CUSTOMER_LOGIN_ID, select the data type of VARCHAR, and leave the default value of NULL. This default value ensures that users that do not use the web interface do not have permission to access the data. Click OK .
 
 Figure 4-25 Creating a global variable called CUSTOMER_LOGIN_ID
+
 
 <!-- image -->
 
@@ -1452,11 +1496,13 @@ Figure 4-25 Creating a global variable called CUSTOMER_LOGIN_ID
 
 Figure 4-26 Setting permissions on the CUSTOMER_LOGIN_ID global variable
 
+
 <!-- image -->
 
 4. The Permissions window opens, as shown in Figure 4-27. Select Change authority for Webuser so that the application can set this global variable.
 
 Figure 4-27 Setting change permissions for Webuser on the CUSTOMER_LOGIN_ID global variable
+
 
 <!-- image -->
 
@@ -1467,6 +1513,7 @@ You now ready to define the row permissions of the tables. Complete the followin
 1. From the navigation pane of System i Navigator, click Schemas  BANK_SCHEMA , right-click Row Permissions , and select New  Row Permission , as shown in Figure 4-28.
 
 Figure 4-28 Selecting new row permissions
+
 
 <!-- image -->
 
@@ -1482,6 +1529,7 @@ Select the Enabled option. Click OK .
 
 Figure 4-29 New row permissions on the CUSTOMERS table
 
+
 <!-- image -->
 
 3. Define the row permissions for the ACCOUNTS table. The New Row Permission window opens, as shown in Figure 4-30. Enter the information regarding the row permissions on the ACCOUNTS table. This row permission defines what is established in the following policy:
@@ -1495,6 +1543,7 @@ Figure 4-29 New row permissions on the CUSTOMERS table
 Select the Enabled option. Click OK .
 
 Figure 4-30 New row permissions on the ACCOUNTS table
+
 
 <!-- image -->
 
@@ -1512,11 +1561,13 @@ Select the Enabled option. Click OK .
 
 Figure 4-31 New row permissions on the TRANSACTIONS table
 
+
 <!-- image -->
 
 5. To verify that the row permissions are enabled, from System i Navigator, click Row Permissions , as shown in Figure 4-32. The three row permissions are created and enabled.
 
 Figure 4-32 List of row permissions on BANK_SCHEMA
+
 
 <!-- image -->
 
@@ -1527,6 +1578,7 @@ This section defines the masks on the columns. Complete the following steps:
 1. From the main navigation pane of System i Navigator, click Schemas  BANK_SCHEMA , right-click Column Masks , and select New  Column Mask , as shown in Figure 4-33.
 
 Figure 4-33 Creating a column mask
+
 
 <!-- image -->
 
@@ -1541,6 +1593,7 @@ Figure 4-33 Creating a column mask
 Select the Enabled option. Click OK .
 
 Figure 4-34 Defining a column mask on the CUSTOMERS table
+
 
 <!-- image -->
 
@@ -1562,6 +1615,7 @@ Figure 4-34 Defining a column mask on the CUSTOMERS table
 
 Figure 4-35 List of column masks on BANK_SCHEMA
 
+
 <!-- image -->
 
 ## 4.3.7 Restricting the inserting and updating of masked data
@@ -1574,11 +1628,13 @@ This step defines the check constraints that support the column masks to make su
 
 Figure 4-36 Definition of the CUSTOMERS table
 
+
 <!-- image -->
 
 2. From the CUSTOMERS definition window, click the Check Constraints tab and click Add , as shown in Figure 4-37.
 
 Figure 4-37 Adding a check constraint
+
 
 <!-- image -->
 
@@ -1592,17 +1648,20 @@ c. Select the On update violation, preserve column value option and click OK .
 
 Figure 4-38 Specifying a new check constraint on the CUSTOMERS table
 
+
 <!-- image -->
 
 4. Figure 4-39 shows that there is now a check constraint on the CUSTOMERS table that prevents any masked data from being updated to the CUSTOMER_EMAIL column.
 
 Figure 4-39 Check constraint on the CUSTOMERS table
 
+
 <!-- image -->
 
 5. Create all the other check constraints that are associated to each of the masks on the CUSTOMERS table. After this is done, these constraints should look like the ones that are shown in Figure 4-40.
 
 Figure 4-40 List of check constraints on the CUSTOMERS table
+
 
 <!-- image -->
 
@@ -1614,17 +1673,20 @@ You are now ready to activate RCAC on all three tables in this example. Complete
 
 Figure 4-41 Enabling RCAC on the CUSTOMERS table
 
+
 <!-- image -->
 
 2. Enable RCAC on the ACCOUNTS table. Right-click the ACCOUNTS table and select Definition . As shown Figure 4-42, make sure that you select Row access control and Column access control . Click OK .
 
 Figure 4-42 Enabling RCAC on ACCOUNTS
 
+
 <!-- image -->
 
 3. Enable RCAC on the TRANSACTIONS table. Right-click the TRANSACTIONS table and select Definition . As shown in Figure 4-43, make sure that you select Row access control . Click OK .
 
 Figure 4-43 Enabling RCAC on TRANSACTIONS
+
 
 <!-- image -->
 
@@ -1636,17 +1698,20 @@ This section displays all the row permissions after enabling RCAC. Complete the 
 
 Figure 4-44 Row permissions after enabling RCAC
 
+
 <!-- image -->
 
 2. Look at one of the row permission definitions by right-clicking it and selecting Definition , as shown in Figure 4-45.
 
 Figure 4-45 Selecting row permission definition
 
+
 <!-- image -->
 
 3. A window opens, as shown in Figure 4-46. Take note of the nonsensical search condition (0=1) of the QIBM_DEFAULT row permission. This permission is ORed with all of the others and it ensures that if someone does not meet any of the criteria from the row permission then this condition is tested, and because it is false the access is denied.
 
 Figure 4-46 Search condition of the QIBM_DEFAULT row permission
+
 
 <!-- image -->
 
@@ -1678,11 +1743,13 @@ To test a DBE (MCAIN) user, complete the following steps:
 
 Figure 4-47 DBE session user
 
+
 <!-- image -->
 
 2. The number of rows that the DBE user MCAIN can see is shown in Figure 4-48.
 
 Figure 4-48 Number of rows that DBE user can see in the CUSTOMERS table
+
 
 <!-- image -->
 
@@ -1698,17 +1765,20 @@ To test a SECURITY user, complete the following steps:
 
 Figure 4-50 SECURITY session user
 
+
 <!-- image -->
 
 2. The number of rows in the CUSTOMERS table that the security officer can see is shown in Figure 4-51. The security officer cannot see any data at all.
 
 Figure 4-51 Number of rows that the security officer can see in the CUSTOMERS table
 
+
 <!-- image -->
 
 3. The result of the third SQL statement is shown in Figure 4-52. Note the empty set that is returned to the security officer.
 
 Figure 4-52 SQL statement that is run by the SECURITY user - no results
+
 
 <!-- image -->
 
@@ -1720,17 +1790,20 @@ To test a Teller (TQSPENCER) user, complete the following steps:
 
 Figure 4-53 TELLER session user
 
+
 <!-- image -->
 
 2. The number of rows in the CUSTOMERS table that the TELLER user can see is shown in Figure 4-54. The TELLER user can see all the rows.
 
 Figure 4-54 Number of rows that the TELLER user can see in the CUSTOMERS table
 
+
 <!-- image -->
 
 3. The result of the third SQL statement is shown in Figure 4-55. Note the masked columns. The TELLER user, TQSPENSER, can see all the rows, but there are some columns where the result is masked.
 
 Figure 4-55 SQL statement that is run by the TELLER user with masked columns
+
 
 <!-- image -->
 
@@ -1742,11 +1815,13 @@ To test an ADMIN (VGLUCCHESS) user, complete the following steps:
 
 Figure 4-56 ADMIN session user
 
+
 <!-- image -->
 
 2. The number of rows that the ADMIN user can see is shown in Figure 4-57. The ADMIN user can see all the rows.
 
 Figure 4-57 Number of rows that the ADMIN can see in the CUSTOMERS table
+
 
 <!-- image -->
 
@@ -1762,11 +1837,13 @@ To test a CUSTOMERS (WEBUSER) user that accesses the database by using the web a
 
 Figure 4-59 WEBUSER session user
 
+
 <!-- image -->
 
 2. A global variable (CUSTOMER_LOGIN_ID) is set by the web application and then is used to check the row permissions. Figure 4-60 shows setting the global variable by using the customer login ID.
 
 Figure 4-60 Setting the global variable CUSTOMER_LOGIN_ID
+
 
 <!-- image -->
 
@@ -1774,17 +1851,20 @@ Figure 4-60 Setting the global variable CUSTOMER_LOGIN_ID
 
 Figure 4-61 Viewing the global variable value
 
+
 <!-- image -->
 
 4. The number of rows that the WEBUSER can see is shown in Figure 4-62. This user can see only the one row that belongs to his web-based user ID.
 
 Figure 4-62 Number of rows that the WEBUSER can see in the CUSTOMERS table
 
+
 <!-- image -->
 
 5. The result of the third SQL statement is shown in Figure 4-63. There are no masked columns, and the user can see only one row, which is the user's own row.
 
 Figure 4-63 SQL statement that is run by WEBUSER - no masked columns
+
 
 <!-- image -->
 
@@ -1814,11 +1894,13 @@ This section looks at some other interesting information that is related to RCAC
 
 Figure 4-67 Visual Explain with no RCAC enabled
 
+
 <!-- image -->
 
 2. Figure 4-68 shows the Visual Explain of the same SQL statement, but with RCAC enabled. It is clear that the implementation of the SQL statement is more complex because the row permission rule becomes part of the WHERE clause.
 
 Figure 4-68 Visual Explain with RCAC enabled
+
 
 <!-- image -->
 
@@ -1826,11 +1908,13 @@ Figure 4-68 Visual Explain with RCAC enabled
 
 Figure 4-69 Index advice with no RCAC
 
+
 <!-- image -->
 
 4. Now, look at the advised indexes with RCAC enabled. As shown in Figure 4-70, there is an additional index being advised, which is basically for the row permission rule. For more information, see 6.4.2, "Index advisor" on page 99.
 
 Figure 4-70 Index advice with RCAC enabled
+
 
 <!-- image -->
 
@@ -1921,6 +2005,7 @@ For example, consider a table containing three columns of first name, last name,
 In this example, the application reads the data for an update to correct the misspelling of the last name. The last name value is changed to Smith in the buffer. Now, a WRITE request is issued by the program, which uses the contents of the record buffer to update the row in the underlying DB2 table. Unfortunately, the record buffer still contains a masked value for the tax ID, so the tax ID value in the table is accidentally set to the masked value.
 
 Figure 5-1 Accidental update with masked values scenario
+
 
 <!-- image -->
 
@@ -2039,6 +2124,7 @@ CREDIT_CARD_NUMBER;
 
 Figure 6-1 Timing of column masking
 
+
 | CREDIT CARD NUMBER _ _    | TOTAL         |
 |---------------------------|---------------|
 | **** **** **** 1234       | 233.50        |
@@ -2060,6 +2146,7 @@ Note: Column masks can influence an SQL INSERT or UPDATE . For example, you cann
 
 Figure 6-2 Masking differences between Fieldproc and RCAC
 
+
 <!-- image -->
 
 ## 6.2 RCAC effects on data movement
@@ -2067,6 +2154,7 @@ Figure 6-2 Masking differences between Fieldproc and RCAC
 As described earlier and shown in Figure 6-3, RCAC is applied pervasively regardless of the data access programming interface, SQL statement, or IBM i command. The effects of RCAC on data movement scenarios can be profound and possibly problematic. It is important to understand these effects and make the appropriate adjustments to avoid incorrect results or data loss.
 
 Figure 6-3 RCAC and data movement
+
 
 <!-- image -->
 
@@ -2094,6 +2182,7 @@ For example, given a "source" table with a row permission defined as NAME <> 'CA
 
 Figure 6-4 RCAC effects on data movement from SOURCE
 
+
 <!-- image -->
 
 ## 6.2.2 Effects when RCAC is defined on the target table
@@ -2107,6 +2196,7 @@ INSERT INTO TARGET (SELECT * FROM SOURCE);
 Given a "target" table with a row permission defined as NAME <> 'CAIN' and a column mask that is defined to project the value 999.99 for AMOUNT, the SELECT statement produces a result set that represents all the rows and columns. The seven row result set is inserted into the "target", and the RCAC row permission causes an error to be returned, as shown in Figure 6-5. The source rows where NAME = 'CAIN' do not satisfy the target table's permission, and therefore cannot be inserted. In other words, you are inserting data that you cannot read.
 
 Figure 6-5 RCAC effects on data movement on TARGET
+
 
 <!-- image -->
 
@@ -2124,6 +2214,7 @@ Although the source rows where NAME <> 'CAIN' do satisfy the target table's perm
 
 Figure 6-6 RCAC effects on data movement on SOURCE and TARGET
 
+
 <!-- image -->
 
 ## 6.3 RCAC effects on joins
@@ -2136,6 +2227,7 @@ As shown in Figure 6-7, there are two different sets, set A and set B. However, 
 
 Figure 6-7 Set A and set B with row permissions
 
+
 <!-- image -->
 
 ## 6.3.1 Inner joins
@@ -2143,6 +2235,7 @@ Figure 6-7 Set A and set B with row permissions
 Inner join defines the intersection of two data sets. For a row to be returned from the inner join query, it must appear in both sets, as shown in Figure 6-8.
 
 Figure 6-8 Inner join without RCAC permission
+
 
 <!-- image -->
 
@@ -2152,6 +2245,7 @@ Effect of column masks on inner joins: Because column masks are applied after th
 
 Figure 6-9 Inner join with RCAC permission
 
+
 <!-- image -->
 
 ## 6.3.2 Outer joins
@@ -2159,6 +2253,7 @@ Figure 6-9 Inner join with RCAC permission
 Outer joins preserve one or both sides of two data sets. A row can be returned from the outer join query if it appears in the primary set (LEFT, RIGHT, or both in the case of FULL), as shown in Figure 6-10. Column values from the secondary set are returned if the row has a match in the primary set. Otherwise, NULL is returned for the column value by default.
 
 Figure 6-10 Outer join without RCAC permission
+
 
 <!-- image -->
 
@@ -2168,6 +2263,7 @@ Effect of column masks on inner joins: Because column masks are applied after th
 
 Figure 6-11 Outer join with RCAC permission
 
+
 <!-- image -->
 
 ## 6.3.3 Exception joins
@@ -2176,11 +2272,13 @@ Exception joins preserve one side of two data sets. A row can be returned from t
 
 Figure 6-12 Exception join without RCAC permission
 
+
 <!-- image -->
 
 Given that row permission serves to eliminate logically rows from one or more sets, more rows can appear to be exceptions when RCAC is applied, as shown in Figure 6-13. Also, because column masks are applied after the query final results are determined, the masked value has no effect on the join processing and corresponding query result set.
 
 Figure 6-13 Exception join with RCAC permission
+
 
 <!-- image -->
 
@@ -2214,11 +2312,13 @@ Figure 6-14 shows how Visual Explain externalizes RCAC.
 
 Figure 6-14 Visual Explain indicating that RCAC is applied
 
+
 <!-- image -->
 
 Figure 6-15 shows the main dashboard of an SQL Performance Monitor. Click Summary .
 
 Figure 6-15 SQL Performance Monitor
+
 
 <!-- image -->
 
@@ -2226,11 +2326,13 @@ Figure 6-16 shows the summary of an SQL Performance Monitor with an indication t
 
 Figure 6-16 SQL Performance Monitor indicating that RCAC is applied
 
+
 <!-- image -->
 
 Figure 6-17 shows the statements of an SQL Performance Monitor and how RCAC is externalized.
 
 Figure 6-17 SQL Performance Monitor showing statements and RCAC
+
 
 <!-- image -->
 
@@ -2252,11 +2354,13 @@ For example, the query that is shown in Figure 6-18 produces index advice for th
 
 Figure 6-18 Index advice and RCAC
 
+
 <!-- image -->
 
 In Figure 6-19, index advisor is showing an index for the ACCOUNTS and CUSTOMERS tables based on the RCAC rule text.
 
 Figure 6-19 Index advisor based on the RCAC rule
+
 
 <!-- image -->
 
@@ -2352,11 +2456,13 @@ Any access to an SQL view that is over one or more tables that have RCAC also ha
 
 Figure 6-21 View definition and user query
 
+
 <!-- image -->
 
 What the query optimizer plans for and what the database engine runs is shown in the Figure 6-22.
 
 Figure 6-22 Query rewrite with RCAC
+
 
 <!-- image -->
 
@@ -2430,11 +2536,13 @@ For programs that access records sequentially, in or out of key order, the added
 
 Figure 6-23 Native record access with no RCAC
 
+
 <!-- image -->
 
 Before the record, as identified by the key, is considered available, the RCAC logic must be run. If the record is rejected by RCAC, the next record in sequence that is permissible must be identified. This spinning through the records can take a long time and uses many resources, as shown in Figure 6-24.
 
 Figure 6-24 Native record level access with RCAC
+
 
 <!-- image -->
 
@@ -2544,6 +2652,7 @@ Figure 6-25 illustrates that object level security is the first check and that R
 
 Figure 6-25 Object-level security and RCAC permissions
 
+
 <!-- image -->
 
 To get access to the table and the rows, the user must pass the object level authority test and the RCAC permission test.
@@ -2615,6 +2724,7 @@ Save and restore processing works fine with RCAC if the RCAC definition does not
 For example, assume that the BANKSCHEMA library (which is the system name or short name for the schema long name of BANK_SCHEMA) is saved and restored into a library named BANK_TEST. Recall from the example in 7.1.4, "Regenerating" on page 114 that the row permission on the ACCOUNTS table references the CUSTOMERS table (… SELECT C.CUSTOMER_ID FROM CUSTOMERS C …). After the restore operation, the ACCOUNTS row permission still references the CUSTOMERS table in BANK_SCHEMA because DB2 explicitly qualifies all object references when the row permission or column mask is created. The restore processing does not change the explicit qualification from BANK_SCHEMA to BANK_TEST. As a result, the restored ACCOUNTS row permission now depends on DB2 objects residing in a different schema, even though it was not created that way originally. For more details, see Figure 7-1.
 
 Figure 7-1 Restoring tables to different schemas
+
 
 <!-- image -->
 
